main.css
@font-face {
	font-family: 'ProximaNova-Regular';
	src: url('fonts/ProximaNova-Regular.otf');
}
@font-face {
	font-family: 'ProximaNova-Semibold';
	src: url('fonts/ProximaNova-Semibold.otf');
}

html{
	background: #fff;
	font-size: 16px;
	width: 100%;
	box-sizing: border-box;
	font-family: 'ProximaNova-Regular', sans-serif;
}

.max_width_wrapper{
	width: 1280px;
	position: relative;
	left: 50%;
	margin-left: -640px;
}

header, #banner, #steps, #items, #whyus, #customers, #notifyme, footer{
	min-width: 1280px;
}

header{
	color: #8f97a2;
	height: auto;
	box-sizing: border-box;
}
header h1{
	float: left;
	margin-left: 130px;
	margin-bottom: 0;
}
header nav#uppernav ul{
	list-style: none;
	top: 0;
	right: 130px;
	position: absolute;
	margin-top: 0;
}
header nav#uppernav ul li{
	background: #5dade2;
	color: #fff;
	padding: 10px 20px;
	float: left;
	margin: 0 0 0 20px;
	font-size: 1.2em;
	-webkit-border-bottom-left-radius: 5px;
	-moz-border-bottom-left-radius: 5px;
	border-bottom-left-radius: 5px;
	-webkit-border-bottom-right-radius: 5px;
	-moz-border-bottom-right-radius: 5px;
	border-bottom-right-radius: 5px;	
}
header nav#lowernav{
	overflow: hidden;
}

header nav#lowernav ul{
	list-style: none;
	margin: 70px 120px 0 0;
}
header nav#lowernav ul li{
	float: right;
	margin-left: 20px;
	font-size: 1.00em;
	padding-bottom: 40px;
	padding-left: 10px;
	padding-right: 10px;
	text-decoration: none;
}
header nav#lowernav ul li.current{
	color: #202427;
	border-bottom: 3px solid #41c6ef;
}

header a{
	text-decoration: none;
	color: inherit;
}

body{
	margin: 0 0 0 0;
}

.arrow-down {
	position: absolute;
	text-align: center;
	width: 0; 
	height: 0; 
	top: 0;
	left: 50%;
	margin-left: -50px;
	border-left: 50px solid transparent;
	border-right: 50px solid transparent;
}

#banner{
	position: relative;
	height: 525px;
	background-color: #dddddd;
	background-image: url('images/iphone_5_box_blurred.png');
	background-size: 100% 100%;
	filter: blur(5px);
	// Browser Specific
	-webkit-filter: blur(5px);
	-moz-filter: blur(5px);
	-o-filter: blur(5px);
	-ms-filter: blur(5px);
}
#banner h1{
	width: 100%;
	margin-top: 60px;
	position: absolute;
	font-size: 3.5em;
	text-align: center;
	color: #fff;
	font-family: 'ProximaNova-Semibold', sans-serif;
}

#bannernav{
	position: absolute;
	top: 150px;
	text-align: center;
	box-sizing: border-box;
	width: 600px;
	left: 50%;
	margin-left: -300px;
}

#bannernav ul{
	list-style: none;
	color: #fff;
	position: absolute;
}

#bannernav ul li{
	float: left;
	margin-left: 20px;
	font-family: 'ProximaNova-Semibold', sans-serif;
	font-size: 1.33em;
}

#bannernav ul li span{
	background: #68cae3;
	padding:15px 25px;
	box-sizing: border-box;
	width: 181px;
	height: 60px;
	-webkit-border-radius: 3px;
	-moz-border-radius: 3px;
	border-radius: 3px;
	margin-left: 60px;
}

#bannernav ul li img{
	margin-top: -20px
}

#banner #iphone_on_side{
	position: absolute;
	bottom: 5px;
	right: 180px;
}

#steps h1{
	text-align: center;
	margin-top: 100px;
}

#steps h2{
	text-align: center;
	width: 100%;
	clear: both;
	font-size: 2.0em;
	margin-top: 30px;
	padding-bottom: 30px;
}

#steps_wrapper{
	padding: 20px 17.5%;
	padding-left: 25%;
}

#steps ul{
	list-style-image: url('images/checkmark_bullet.png');
	font-size: 1.2em;
	margin: 0 0 0 0;
	overflow: hidden;
}

#steps ul li{
	width: 50%;
	float: left;
}

#steps ul li h3{
	margin-left: 10px;
}

#steps ul li p{
	width: 80%;
	margin-left: 10px;
	color: #9097aa;
}

#items{
	background: #f5f7f6;
	position: relative;
	overflow: hidden;
	padding-bottom: 40px;
}

#items .arrow-down{
	border-top: 50px solid #fff;
}

#items h2{
	font-size: 2.0em;
	clear: both;
	text-align: center;
	margin-top: 80px;
	padding: 20px 0;
}

#items #recentlyadded, #items #justsold{
	list-style: none;
	width: 100%;
}

#items #recentlyadded li, #items #justsold li{
	float: left;
	background: #fff;
	color: #333;
	text-align: center;
	margin-left: 62px;
	height: 320px;
	-webkit-border-radius: 10px;
	-moz-border-radius: 10px;
	border-radius: 10px;
	-moz-box-shadow:    1px 3px 2px 2px #e1e2e4;
	-webkit-box-shadow: 1px 3px 2px 2px #e1e2e4;
	box-shadow:         1px 3px 2px 2px #e1e2e4;	
	text-align: left;

}
#items #recentlyadded li h3, #items #justsold li h3{
	margin-left: 10px;
	font-size: 1em;
	font-family: 'ProximaNova-Semibold', sans-serif;
}
#items #recentlyadded li p, #items #justsold li p{
	color: #9097aa;
	margin-left: 10px;
	font-size: 0.8em;
}

li.inactive{
	display: none;
}

li.active img{
	width: 320px;
	height: 180px;
	-webkit-border-top-left-radius: 5px;
	-moz-border-top-left-radius: 5px;
	border-top-left-radius: 5px;
	-webkit-border-top-right-radius: 5px;
	-moz-border-top-right-radius: 5px;
	border-top-right-radius: 5px;	
}

li #image-placeholder{
	background: #cccccc;
	color: #333;
	width: 320px;
	height: 180px;
	text-align: center;
	margin: -16px 0 0 0;
	-webkit-border-top-left-radius: 5px;
	-moz-border-top-left-radius: 5px;
	border-top-left-radius: 5px;
	-webkit-border-top-right-radius: 5px;
	-moz-border-top-right-radius: 5px;
	border-top-right-radius: 5px;	
}

#whyus{
	background: #41c6ef;
	position: relative;
	overflow: hidden;
	color: #fff;
	margin-bottom: -10px;
}

#whyus .arrow-down{
	border-top: 50px solid #f5f7f6;
}

#whyus h1{
	text-align: center;
	width: 100%;
	font-size: 3em;
	margin-top: 100px;
	padding-bottom: 40px;
}

#whyus .column{
	float: left;
	width: 350px;
	margin-left: 50px;
}

#whyus .column h3{
	font-family: 'ProximaNova-Semibold', sans-serif;
	font-size: 1.4em;
}

#whyus .column p{
	line-height: 1.5;
	font-size: 1.1em;
	color: #c0e9fb;
}

#customers{
	background: #fff;
	background-image: url('images/tile-pattern.png');
	position: relative;
	overflow: hidden;
	padding-bottom: 100px;
}

#customers .arrow-down{
	border-top: 50px solid #41c6ef;
}

#customers .circular_wrapper{
	height: 150px;
	width: 150px;
	margin-left: 100px;
	margin-top: 20px;
	-webkit-border-radius: 50%;
	-moz-border-radius: 50%;
	border-radius: 50%;
	background: #cccccc;
}

#customers h1{
	text-align: center;
	margin: 0 0 0 0;
	font-size: 3em;
	padding-top: 100px;
	padding-bottom: 60px;
}

#customers ul{
	list-style: none;
}

#customers ul li{
	width: 350px;
	position: relative;
	margin-left: 50px;
	float: left; 
	text-align: center;
}

#customers ul li.first{
	margin-left: 0;
}

#customers ul li .quote_wrapper{
	background: #edeef0;
	color: #959cac;
	box-sizing: border-box;
	padding: 20px 20px;
	height: 125px;
	font-size: 1.1em;
	-webkit-border-radius: 5px;
	-moz-border-radius: 5px;
	border-radius: 5px;
	position: relative;
}

#customers ul li .quote_wrapper .arrow-down {
	position: absolute;
	text-align: center;
	width: 0; 
	height: 0; 
	top: 125px ;
	left: 50%;
	margin-left: -10px;
	border-left: 10px solid transparent;
	border-right: 10px solid transparent;
	border-top: 10px solid #edeef0;
}

#customers ul li p {
	margin-top: 10px;
}

#notifyme, footer{
	padding: 0 50px;
}


#notifyme{
	width: 100%;
	background: #223442;
	position: relative;
	overflow: hidden;
}

#notifyme h1{
	color: #fff;
	padding: 50px 0px;
	font-size: 2.5em;
	margin: 0 0 0 0;
	font-weight: 100;
}

#notifyme a{
	color: #fff;
	text-decoration: none;
}

#notifyme h2{
	background: #2fc6a5;
	height:50px;
	width: 180px;
	box-sizing: border-box;
	-webkit-border-radius: 5px;
	-moz-border-radius: 5px;
	-moz-box-shadow:    1px 5px 0px 1px #21a888;
	-webkit-box-shadow: 1px 5px 0px 1px #21a888;
	box-shadow:         1px 5px 0px 1px #21a888;	
	border-radius: 5px;
	padding: 15px 35px;
	position: absolute;
	top: 50%;
	right: 125px;
	margin-top: -25px;
}

footer{
	color: #606c7a;
	background: #152837;
	overflow: hidden;
}

footer ul{
	list-style: none;
	margin: 0 0 0 0;
	padding: 50px 35px;
	float: left;
}

footer ul li{
	float: left;
	margin-left: 20px;
}

footer span{
	padding: 50px 0;
	float: right;
	margin-right: 75px;
}

